Prevent invisible-input from affecting layout

--- a/brackets-builder.css
+++ b/brackets-builder.css
@@ -52,6 +52,7 @@
     overflow-y: hidden;
 }
 .invisible-input {
+    position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
